--- a/everything-presence-one.yaml
+++ b/everything-presence-one.yaml
@@ -32,7 +32,13 @@ api:
 ota:
 
 wifi:
-  fast_connect: ${hidden_ssid}
+  ssid: "MR_BRZ_EXT_2G"
+  password: "2mygatewayagain"
+  # Optional manual IP
+  manual_ip:
+    static_ip: 192.168.1.184
+    gateway: 192.168.1.1
+    subnet: 255.255.255.0
   ap: {}
 
 captive_portal:
